tried to fix flickering on render by adding code to check for SSR and mobile window width, don't know if it worked

--- a/src/styles/Home-Hero.module.css
+++ b/src/styles/Home-Hero.module.css
@@ -157,21 +157,6 @@
     brightness(97%) contrast(80%);
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-}
-
-@media (prefers-reduced-motion) {
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-}
-
-/* Tablet and Smaller Desktop
-@media (min-width: 701px) and (max-width: 1120px) {
-} */
-
 /* Tablet and Smaller Desktop */
 @media (max-width: 1200px) {
   .header {
